# SPDX-FileCopyrightText: © 2024 David Bliss
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "fotema"
version = "0.1.0"
authors = ["David Bliss <hello@fotema.app>"]
edition = "2021"
publish = false

[workspace]
members = ["core"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = ["chrono", "env-filter"] }
relm4 = { version = "0.9.0", features = ["libadwaita", "gnome_46"] }
itertools = "0.13.0"
humansize = "2.1.3"
rayon = "1.10.0"
glycin = { version = "2.0.0-beta", features = ["gdk4"] }
futures = "0.3.30"
chrono = "0.4.38"
anyhow = "1.0.86"
strum = { version = "0.26.2", features = ["derive"] }
i18n-embed = { version = "0.15.0", features = ["fluent-system", "filesystem-assets", "desktop-requester"] }
rust-embed = "8.5.0"
i18n-embed-fl = "0.9.1"
unic-langid = "0.9.5"
lazy_static = "1.4.0"
libshumate-sys = "0.6.0"
h3o = "0.6.4"

[dependencies.shumate]
package = "libshumate"
version = "0.6.0"

[dependencies.fotema_core]
path = "core"
