# SPDX-FileCopyrightText: © 2024 David Bliss
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "fotema"
version = "0.1.0"
authors = ["David Bliss <hello@fotema.app>"]
edition = "2024"
publish = false

[workspace]
members = ["core"]

[profile.release]
lto = "thin"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["chrono", "env-filter"] }
relm4 = { version = "0.10.0", features = ["libadwaita", "gnome_48"] }
itertools = "0.14.0"
humansize = "2.1.3"
rayon = "1.11.0"
glycin = { version = "3.0.7", features = ["gdk4"] }
futures = "0.3.31"
chrono = "0.4.42"
anyhow = "1.0.100"
strum = { version = "0.27.2", features = ["derive"] }
i18n-embed = { version = "0.16.0", features = ["fluent-system", "filesystem-assets", "desktop-requester"] }
rust-embed = "8.10.0"
i18n-embed-fl = "0.10.0"
unic-langid = "0.9.5"
lazy_static = "1.4.0"
libshumate-sys = "0.7.0"
h3o = "0.9.3"
ashpd = { version = "0.12.1", default-features = false, features = ["gtk4", "async-std"] }
regex = "1.12.2"
deadpool = "0.12.3"

[dependencies.shumate]
package = "libshumate"
version = "0.7.0"

[dependencies.fotema_core]
path = "core"
