# SPDX-FileCopyrightText: © 2024 David Bliss
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "fotema_core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
base64 = "0.22.1"
chrono = "0.4.42"
fast_image_resize = { version = "5.3.0", features = ["image"] }
ffmpeg-next = "8.0.0"
gdk4 = "0.9.5"
gio = "0.21.2"
glycin = { version = "2.1.0", features = ["gdk4"] }
h3o = "0.9.1"
image = "0.25.8"
kamadak-exif = "0.6.1"
rayon = "1.11.0"
refinery = { version = "0.8.15", features = ["rusqlite"] }
rusqlite = { version = "0.33.0", features = ["bundled", "chrono"] }
rust-faces = {git = "https://github.com/blissd/fotema-rust-faces.git", tag = "v1.0.0", features = ["viz"]}
sm_motion_photo = "0.1.5"
strum = { version = "0.27.2", features = ["derive"] }
tempfile = "3.22.0"
tracing = "0.1.41"
walkdir = "2.5.0"
opencv = {version = "0.95.1", default-features = false, features = ["clang-runtime", "objdetect", "imgcodecs", "dnn"]}
itertools = "0.14.0"
reqwest = { version = "0.12.23", features = ["blocking"] }
futures = "0.3.31"
url = "2.5.7"
md-5 = "0.10.6"
png = "0.17.16"
thiserror = "2.0.16"
